se agregan cosas al formulario, falta solucionar problema de comunicacion

--- a/frontEnd/src/app/components/employees/employees.component.html
+++ b/frontEnd/src/app/components/employees/employees.component.html
@@ -4,11 +4,34 @@
       <div class="card">
         <div class="card-content">
           <form #employeeForm="ngForm" (ngSubmit)="addEmployee(employeeForm)"></form>
+          <div class="row">
+            <div class="input-field col s12">
+              <input type="text" name="name" #name="ngModel" [(ngModel)]="employeeService.selectedEmployeed.name" placeholder="Ingresa tu nombre">
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <input type="text" name="position" #name="ngModel" [(ngModel)]="employeeService.selectedEmployeed.position" placeholder="Ingresa tu posicion">
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <input type="text" name="office" #name="ngModel" [(ngModel)]="employeeService.selectedEmployeed.office" placeholder="Ingresa tu office">
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <input type="number" name="salary" #name="ngModel" [(ngModel)]="employeeService.selectedEmployeed.salary" placeholder="Ingresa tu Salario">
+            </div>
+          </div>
+          <div class="card-action">
+            <div class="input-field col s12">
+              <button class="btn rigth" (click)="addEmployee(employeeForm)">Guardar</button>
+              <button class="btn" (click)="resetForm(employeeForm)">Limpiar</button>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col s7">
-
     </div>
   </div>
 </div>
